removed depracated method call from getting JDBC instance